Removes horizontal overflow hiding from <body>, as it can cause issues with libraries like react-list

--- a/reset.css
+++ b/reset.css
@@ -183,8 +183,6 @@ html {
 
 body {
   max-width: 100%;
-  overflow: hidden;
-  overflow-y: visible;
 }
 
 /*
